--- a/wp-content/themes/safedescents/resources/assets/styles/main.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/main.scss
@@ -1,15 +1,5 @@
+@import "~normalize.css/normalize.css";
 @import "common/variables";
-
-/** Import everything from autoload */
-@import "./autoload/**/*";
-
-/**
- * Import npm dependencies
- *
- * Prefix your imports with `~` to grab from node_modules/
- * @see https://github.com/webpack-contrib/sass-loader#imports
- */
-// @import "~some-node-module";
 
 /** Import theme styles */
 @import "common/global";
@@ -23,3 +13,18 @@
 @import "layouts/pages";
 @import "layouts/posts";
 @import "layouts/tinymce";
+
+.hero {
+  height: 500px;
+  background-size: cover;
+}
+
+.services {
+  height: 400px;
+  display: flex;
+
+  article {
+    flex-grow: 1;
+    background-size: cover;
+  }
+}
