--- a/wp-content/themes/safedescents/resources/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/layouts/_header.scss
@@ -1,2 +1,9 @@
-// TODO: .banner .nav li {}
-// TODO: .banner .nav a {}
+.header {
+  height: 500px;
+  background-size: cover;
+}
+
+.custom-logo {
+  width: 100px;
+  height: auto;
+}
