--- a/wp-content/themes/safedescents/resources/assets/styles/main.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/main.scss
@@ -1,30 +1,14 @@
 @import "~normalize.css/normalize.css";
 @import "common/variables";
 
-/** Import theme styles */
+// Import theme styles
 @import "common/global";
-@import "components/buttons";
-@import "components/comments";
-@import "components/forms";
+@import "common/typography";
 @import "components/wp-classes";
+@import "components/buttons";
+@import "components/banner";
+@import "layouts/nav";
 @import "layouts/header";
-@import "layouts/sidebar";
 @import "layouts/footer";
-@import "layouts/pages";
-@import "layouts/posts";
-@import "layouts/tinymce";
-
-.hero {
-  height: 500px;
-  background-size: cover;
-}
-
-.services {
-  height: 400px;
-  display: flex;
-
-  article {
-    flex-grow: 1;
-    background-size: cover;
-  }
-}
+@import "pages/homepage";
+@import "common/mediaqueries";
