--- a/wp-content/themes/safedescents/resources/assets/styles/layouts/_nav.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/layouts/_nav.scss
@@ -1,4 +1,4 @@
-.custom-logo-link img {
+.logo {
   width: 200px;
 }
 
@@ -13,9 +13,11 @@
   display: inline-block;
   margin-left: 30px;
   text-transform: uppercase;
+  font-family: 'Muli', sans-serif;
+  font-size: $font-size-regular;
 
   a {
-    color: white;
+    color: $color-white;
     text-decoration: none;
   }
 }
