--- a/wp-content/themes/safedescents/resources/assets/styles/pages/_homepage.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/pages/_homepage.scss
@@ -1,9 +1,45 @@
+.home {
+  .header {
+    position: relative;
+
+    h1 {
+      width: 50%;
+      margin: 0 auto;
+      padding-top: 3em;
+    }
+
+    .banner {
+      position: absolute;
+      bottom: 0;
+    }
+  }
+}
+
 .services {
-  height: 400px;
+  height: 500px;
   display: flex;
 
   article {
     flex-grow: 1;
     background-size: cover;
+  }
+}
+
+.callout {
+  height: 500px;
+  background-size: cover;
+  background-position: bottom;
+  position: relative;
+
+  .callout-text {
+    position: absolute;
+    width: 30%;
+    bottom: 30px;
+    left: 30px;
+    z-index: 10;
+  }
+
+  &::after {
+    @extend %gradient;
   }
 }
