Styling bottom bar footer

--- a/wp-content/themes/safedescents/resources/assets/styles/main.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/main.scss
@@ -7,6 +7,7 @@
 @import "components/wp-classes";
 @import "components/buttons";
 @import "components/banner";
+@import "components/unity";
 @import "layouts/nav";
 @import "layouts/header";
 @import "layouts/footer";
