--- a/wp-content/themes/safedescents/resources/assets/styles/common/_variables.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/common/_variables.scss
@@ -30,6 +30,8 @@ $font-size-medium-large: 35px;
 $font-size-large: 40px;
 $font-size-extra-large: 45px;
 
+// Misc
+$text-shadow: 2px 2px rgba(0, 0, 0, 0.5);
 $spacer: 2rem;
 
 %gradient {
