--- a/wp-content/themes/safedescents/resources/assets/styles/components/_buttons.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/components/_buttons.scss
@@ -1,5 +1,5 @@
 .btn {
-  padding: 10px 5px;
+  padding: 10px;
   background: $color-black;
   color: $color-white;
   text-decoration: none;
@@ -9,5 +9,5 @@
   display: block;
   width: 150px;
   text-align: center;
-  margin: 0 auto;
+  margin: 1em auto 2em auto;
 }
