--- a/wp-content/themes/safedescents/resources/assets/styles/pages/_homepage.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/pages/_homepage.scss
@@ -2,16 +2,6 @@
   .header {
     position: relative;
 
-    video {
-      position: absolute;
-      background-attachment: fixed;
-      bottom: 0;
-      left: 0;
-      z-index: -10;
-      overflow: hidden;
-      width: 100%;
-    }
-
     h1 {
       width: 50%;
       margin: 0 auto;
@@ -25,6 +15,17 @@
       box-sizing: border-box;
     }
   }
+}
+
+.home video {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: -10;
 }
 
 .services {
@@ -76,10 +77,6 @@
     bottom: 30px;
     left: 30px;
     z-index: 10;
-  }
-
-  &::after {
-    @extend %gradient;
   }
 }
 
