--- a/wp-content/themes/safedescents/resources/assets/styles/main.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/main.scss
@@ -8,6 +8,7 @@
 @import "components/buttons";
 @import "components/banner";
 @import "components/unity";
+@import "components/coverage-map";
 @import "layouts/nav";
 @import "layouts/header";
 @import "layouts/footer";
