--- a/wp-content/themes/safedescents/resources/assets/styles/components/_coverage-map.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/components/_coverage-map.scss
@@ -1,4 +1,10 @@
-.coverage-map {
+.map-container {
+  background: url('../assets/images/map-bg.png');
+  background-size: cover;
+  background-position: center;
+}
+
+.map {
   margin: 0 auto;
   display: block;
 
@@ -13,4 +19,18 @@
   path#NC:hover {
     fill: $color-slate;
   }
+}
+
+#tooltip {
+  display: none;
+}
+
+.tippy-tooltip.map-theme {
+  background-color: white;
+  font-family: $secondary-font;
+  color: $color-black;
+}
+
+.tippy-popper[x-placement^=top] .tippy-tooltip.map-theme .tippy-arrow {
+  background-color: white;
 }
