--- a/wp-content/themes/safedescents/resources/assets/styles/pages/_homepage.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/pages/_homepage.scss
@@ -105,3 +105,45 @@
     }
   }
 }
+
+.latestposts {
+  background: $color-dark-slate;
+  padding: 3em;
+
+  .container {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+
+    article {
+      flex-grow: 1;
+      flex-basis: 0;
+      align-self: stretch;
+      display: flex;
+      align-items: center;
+      color: $color-white;
+      padding: 2em;
+
+      &:nth-of-type(-n+2) {
+        border-right: 1px solid #979797;
+      }
+
+      .post-title {
+        font-family: $primary-font;
+        font-size: 20px;
+      }
+
+      img {
+        width: auto;
+        margin-right: 1em;
+      }
+
+      a {
+        color: white;
+        font-family: $primary-font;
+        font-size: 18px;
+      }
+    }
+  }
+}
