Styling featured posts on homepage

--- a/wp-content/themes/safedescents/resources/assets/styles/pages/_homepage.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/pages/_homepage.scss
@@ -140,7 +140,7 @@
       }
 
       a {
-        color: white;
+        color: $color-white;
         font-family: $primary-font;
         font-size: 18px;
       }
