Refactoring the template and styles for the homepage, header, and footer

--- a/wp-content/themes/safedescents/resources/assets/styles/common/_global.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/common/_global.scss
@@ -6,6 +6,11 @@ img {
   width: 100%;
 }
 
+.wrapper {
+  max-width: 1280px;
+  margin: 0 auto;
+}
+
 .parallax {
   position: relative;
   background-attachment: fixed;
