--- a/wp-content/themes/safedescents/resources/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/layouts/_header.scss
@@ -1,10 +1,46 @@
-.header {
-  height: 100vh;
+// Global Site Header
+header {
   background-size: cover;
+  height: 400px;
   text-align: center;
 }
 
+// Global Site Logo
 .custom-logo {
   width: 100px;
   height: auto;
+}
+
+// Front Page Header
+.header-frontpage {
+  position: relative;
+  height: 100vh;
+  background-size: cover;
+  text-align: center;
+
+  video {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -10;
+  }
+
+  h1 {
+    width: 50%;
+    margin: 0 auto;
+    position: relative;
+    top: 35%;
+    transform: translateY(-50%);
+  }
+
+  .banner {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    box-sizing: border-box;
+  }
 }
