--- a/wp-content/themes/safedescents/resources/assets/styles/common/_mediaqueries.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/common/_mediaqueries.scss
@@ -1,13 +1,15 @@
 @media (max-width: 767px) {
-  .home .header h1 {
+  .header-frontpage h1 {
     width: auto;
   }
 
   .callout .callout-text {
     width: auto;
+    left: 20px;
+    margin-left: 10px;
   }
 
-  .services .container {
+  .services .services-container {
     display: block;
 
     article {
@@ -24,8 +26,27 @@
   .products {
     height: 700px;
 
-    .container {
+    .products-container {
       width: auto;
+      margin-right: 0;
+    }
+  }
+
+  .latestposts {
+    padding: 15px;
+
+    .latestposts-container {
+      display: block;
+
+      article {
+        img {
+          display: none;
+        }
+
+        &:nth-of-type(-n+2) {
+          border-color: transparent;
+        }
+      }
     }
   }
 }
