Buy now checkout page

--- a/wp-content/themes/safedescents/resources/assets/styles/main.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/main.scss
@@ -13,4 +13,5 @@
 @import "layouts/header";
 @import "layouts/footer";
 @import "pages/homepage";
+@import "pages/buynow";
 @import "common/mediaqueries";
