Header for buy now checkout process

--- a/wp-content/themes/safedescents/resources/assets/styles/layouts/_nav.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/layouts/_nav.scss
@@ -32,7 +32,7 @@ nav li {
 }
 
 // Buy Nav Item
-.buynow a {
+.buynow-btn a {
   color: $color-black !important;
   background: $color-white;
   padding: 20px;
