--- a/wp-content/themes/safedescents/resources/assets/styles/common/_mediaqueries.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/common/_mediaqueries.scss
@@ -53,6 +53,7 @@
   .nav-trigger {
     display: block;
     position: relative;
+    right: 20px;
     z-index: 20;
   }
 
@@ -64,7 +65,7 @@
     padding: 100px 0;
     right: 0;
     top: 0;
-    width: 50vw;
+    width: 100%;
     height: 100vh;
     background: $color-white;
     z-index: 10;
@@ -78,6 +79,19 @@
         text-shadow: none;
         display: block;
         padding: 20px;
+      }
+    }
+  }
+
+  #buynow {
+    display: block;
+    padding: 2em 10px;
+
+    .passes article {
+      margin: 0;
+
+      &:first-of-type {
+        border-right: 2px solid $color-dark-slate;
       }
     }
   }
