--- a/wp-content/themes/safedescents/resources/assets/styles/components/_buttons.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/components/_buttons.scss
@@ -11,9 +11,24 @@
   text-align: center;
   margin: 1em auto 2em auto;
   border: 2px solid $color-black;
+  cursor: pointer;
 
   &:hover {
     background: $color-white;
     color: $color-black;
+  }
+}
+
+.btn-alt {
+  @extend .btn;
+
+  background: $color-white;
+  color: $color-black;
+  width: auto;
+
+  &:hover {
+    border-color: $color-white;
+    color: $color-white;
+    background: transparent;
   }
 }
