Adding styles and functionality for the covered skiers panels

--- a/wp-content/themes/safedescents/resources/assets/styles/main.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/main.scss
@@ -9,6 +9,7 @@
 @import "components/banner";
 @import "components/unity";
 @import "components/coverage-map";
+@import "components/addskier";
 @import "layouts/nav";
 @import "layouts/header";
 @import "layouts/footer";
