Adding Claims page and fallback hero image

--- a/wp-content/themes/safedescents/resources/assets/styles/common/_global.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/common/_global.scss
@@ -11,6 +11,11 @@ img {
   margin: 0 auto;
 }
 
+.content-wrapper {
+  max-width: 900px;
+  margin: 0 auto;
+}
+
 .parallax {
   position: relative;
   background-attachment: fixed;
