--- a/wp-content/themes/safedescents/resources/assets/styles/common/_typography.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/common/_typography.scss
@@ -36,7 +36,13 @@ h5 {
 }
 
 p {
-  font-family: $secondary-font;
+  font-family: 'Merriweather', serif;
   font-size: $font-size-regular;
-  line-height: 1.5em;
+  font-weight: $font-weight-light;
+  line-height: 2em;
+  margin-bottom: 1.5em;
+}
+
+a {
+  color: $color-light-grey;
 }
