--- a/wp-content/themes/safedescents/resources/assets/styles/common/_variables.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/common/_variables.scss
@@ -15,7 +15,7 @@ $color-black: #000;
 
 // Fonts
 $primary-font: 'Montserrat', sans-serif;
-$secondary-font: 'Lora', serif;
+$secondary-font: 'Merriweather', serif;
 
 // Font Weights
 $font-weight-light: 300;
@@ -24,7 +24,7 @@ $font-weight-medium: 500;
 $font-weight-bold: 700;
 
 // Font Sizes
-$font-size-regular: 18px;
+$font-size-regular: 17px;
 $font-size-medium: 30px;
 $font-size-medium-large: 35px;
 $font-size-large: 40px;
