--- a/wp-content/themes/safedescents/resources/assets/styles/main.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/main.scss
@@ -1,7 +1,5 @@
 @import "~normalize.css/normalize.css";
 @import "common/variables";
-
-// Import theme styles
 @import "common/global";
 @import "common/typography";
 @import "components/wp-classes";
@@ -15,4 +13,5 @@
 @import "layouts/footer";
 @import "pages/homepage";
 @import "pages/buynow";
+@import "pages/claims";
 @import "common/mediaqueries";
