--- a/wp-content/themes/safedescents/resources/assets/styles/main.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/main.scss
@@ -8,6 +8,7 @@
 @import "components/unity";
 @import "components/coverage-map";
 @import "components/addskier";
+@import "components/team";
 @import "layouts/nav";
 @import "layouts/header";
 @import "layouts/footer";
