Adding Flexbox Grid and refactoring homepage, header, footer, claims, and about pages

--- a/wp-content/themes/safedescents/resources/assets/styles/common/_global.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/common/_global.scss
@@ -11,6 +11,15 @@ img {
   margin: 0 auto;
 }
 
+.row {
+  margin-right: 0;
+  margin-left: 0;
+}
+
+.col-xs-12 {
+  padding: 0;
+}
+
 .content-wrapper {
   max-width: 900px;
   margin: 0 auto;
