--- a/wp-content/themes/safedescents/resources/assets/styles/common/_mediaqueries.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/common/_mediaqueries.scss
@@ -33,19 +33,13 @@
   }
 
   .latestposts {
-    padding: 15px;
+    article {
+      img {
+        display: none;
+      }
 
-    .latestposts-container {
-      display: block;
-
-      article {
-        img {
-          display: none;
-        }
-
-        &:nth-of-type(-n+2) {
-          border-color: transparent;
-        }
+      &:nth-of-type(-n+2) {
+        border-color: transparent;
       }
     }
   }
@@ -53,7 +47,7 @@
   .nav-trigger {
     display: block;
     position: relative;
-    right: 20px;
+    text-align: right;
     z-index: 20;
   }
 
