--- a/wp-content/themes/safedescents/resources/assets/styles/components/_team.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/components/_team.scss
@@ -1,14 +1,9 @@
 .team {
-  display: flex;
-  flex-wrap: wrap;
-
   .teammember {
     height: 500px;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    flex-grow: 1;
-    flex-basis: 50%;
     position: relative;
     text-align: center;
     overflow: hidden;
@@ -30,7 +25,7 @@
       transition: all 0.5s;
       padding: 20px;
       pointer-events: none;
-      height: auto;
+      height: 100%;
       width: 100%;
       box-sizing: border-box;
       position: absolute;
