--- a/wp-content/themes/safedescents/resources/assets/styles/main.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/main.scss
@@ -1,5 +1,6 @@
-@import "~materialize-css/sass/materialize";
-// @import "~normalize.css/normalize.css";
+// @import "~materialize-css/sass/materialize";
+@import "~flexboxgrid/css/flexboxgrid.min";
+@import "~normalize.css/normalize.css";
 @import "common/variables";
 @import "common/global";
 @import "common/typography";
