Adding icons to footer and editing UL typography

--- a/wp-content/themes/safedescents/resources/assets/styles/common/_typography.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/common/_typography.scss
@@ -46,3 +46,12 @@ p {
 a {
   color: $color-light-grey;
 }
+
+ul {
+  li {
+    font-size: $font-size-regular;
+    font-family: $secondary-font;
+    font-weight: $font-weight-light;
+    line-height: 2em;
+  }
+}
