--- a/wp-content/themes/safedescents/resources/assets/styles/components/_buy-now-drawer.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/components/_buy-now-drawer.scss
@@ -54,6 +54,7 @@
     position: relative;
     left: 110%;
     display: flex;
+    justify-content: space-around;
 
     article {
       width: 50%;
