--- a/wp-content/themes/safedescents/resources/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/layouts/_header.scss
@@ -3,6 +3,10 @@ header {
   background-size: cover;
   height: 400px;
   text-align: center;
+
+  .site-header {
+    padding-top: 20px;
+  }
 }
 
 // Global Site Logo
