--- a/wp-content/themes/safedescents/resources/assets/styles/main.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/main.scss
@@ -12,6 +12,7 @@
 @import "components/coverage-map";
 @import "components/addskier";
 @import "components/team";
+@import "components/socialicons";
 @import "layouts/nav";
 @import "layouts/header";
 @import "layouts/footer";
