--- a/wp-content/themes/safedescents/resources/assets/styles/common/_mediaqueries.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/common/_mediaqueries.scss
@@ -1,4 +1,5 @@
 @media (max-width: 767px) {
+  // Homepage
   .header-frontpage h1 {
     width: auto;
   }
@@ -9,17 +10,9 @@
     margin-left: 10px;
   }
 
-  .services .services-container {
-    display: block;
-
+  .services {
     article {
-      width: 100%;
       height: 400px;
-
-      h3 {
-        margin-top: 0;
-        padding-top: 20px;
-      }
     }
   }
 
@@ -44,6 +37,7 @@
     }
   }
 
+  // Mobile Navigation
   .nav-trigger {
     display: block;
     position: relative;
@@ -77,6 +71,7 @@
     }
   }
 
+  // Buy Now Drawer
   #buynow {
     display: block;
     padding: 2em 10px;
@@ -93,9 +88,5 @@
   .buynow a {
     color: $color-white !important;
     background: $color-black;
-  }
-
-  .team {
-    display: block;
   }
 }
