Fixing coverage map, internal pages, other stuff

--- a/wp-content/themes/safedescents/resources/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/layouts/_header.scss
@@ -15,6 +15,11 @@ header {
   height: auto;
 }
 
+// Non Front Page Header
+.page-header {
+  height: 400px;
+}
+
 // Front Page Header
 .header-frontpage {
   position: relative;
