--- a/wp-content/themes/safedescents/resources/assets/styles/main.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/main.scss
@@ -10,6 +10,7 @@
 @import "components/banner";
 @import "components/unity";
 @import "components/coverage-map";
+@import "components/tooltip";
 @import "components/addskier";
 @import "components/team";
 @import "components/socialicons";
