Functionality for the checkout buy now page

--- a/wp-content/themes/safedescents/resources/assets/styles/main.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/main.scss
@@ -18,6 +18,6 @@
 @import "layouts/header";
 @import "layouts/footer";
 @import "pages/homepage";
-// @import "pages/buynow";
+@import "pages/buynow";
 @import "pages/claims";
 @import "common/mediaqueries";
