Add buy-now form to checkout page if no config options are passed through URL

--- a/wp-content/themes/safedescents/resources/assets/styles/common/_variables.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/common/_variables.scss
@@ -12,6 +12,7 @@ $color-light-grey: #EFEFEF;
 // Base Colors
 $color-white: #FFF;
 $color-black: #000;
+$color-error: #B90A0A;
 
 // Fonts
 $primary-font: 'Montserrat', sans-serif;
