--- a/wp-content/themes/safedescents/resources/assets/styles/main.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/main.scss
@@ -8,6 +8,7 @@
 @import "components/buttons";
 @import "components/buy-now-drawer";
 @import "components/banner";
+@import "components/forms";
 @import "components/unity";
 @import "components/coverage-map";
 @import "components/tooltip";
