--- a/wp-content/themes/safedescents/resources/assets/styles/common/_typography.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/common/_typography.scss
@@ -1,3 +1,7 @@
+body {
+  font-family: 'Merriweather', serif;
+}
+
 h1 {
   font-family: $primary-font;
   font-weight: $font-weight-medium;
@@ -36,7 +40,6 @@ h5 {
 }
 
 p {
-  font-family: 'Merriweather', serif;
   font-size: $font-size-regular;
   font-weight: $font-weight-light;
   line-height: 2em;
