--- a/wp-content/themes/safedescents/resources/assets/styles/pages/_buynow.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/pages/_buynow.scss
@@ -1,11 +1,24 @@
-#sticky-cart {
-  background: red;
-  right: 0;
-  height: 100vh;
-  z-index: -10;
+.sticky-cart {
+  // background: red;
+  box-shadow: -5px 0 10px $color-light-grey;
+  // height: 100vh;
   width: 100%;
-  top: 0;
-  position: fixed;
+  padding: 0;
+
+  [id="sticky-cart"] {
+    padding: 1rem 1rem 0;
+
+    &.fixed {
+      width: 25%;
+      position: fixed;
+      top: 0;
+      right: 0;
+    }
+  }
+
+  .hidden {
+    display: none;
+  }
 }
 
 #buynowform {
