Add flatpickr, convert trip dates to range field, and put trip dates in summary sidebar

--- a/wp-content/themes/safedescents/resources/assets/styles/main.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/main.scss
@@ -1,5 +1,6 @@
 // @import "~materialize-css/sass/materialize";
 @import "~flexboxgrid/css/flexboxgrid.min";
+@import "~flatpickr/dist/flatpickr.css";
 @import "~normalize.css/normalize.css";
 @import "common/variables";
 @import "common/global";
