--- a/wp-content/themes/safedescents/resources/assets/styles/pages/_buynow.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/pages/_buynow.scss
@@ -7,7 +7,7 @@
     padding: 1rem 1rem 0;
 
     &.fixed {
-      width: 25%;
+      width: calc(25% - 2rem);
       position: fixed;
       top: 0;
       right: 0;
